# biasradar-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml
.github/workflows/: staging-integration.yml
frontend/: .env.example  README.md  package-lock.json  package.json  vitest.config.ts
prompts/: evidence_verifier.txt  football_controversy.txt  stance_classifier.txt  topic_viability.txt
scripts/: test_supabase.py
src/biasradar/: analyzer.py  api.py  api_models.py  api_repository.py  api_server.py  article_cleaner.py  cli.py  config.py  db.py  evidence_verifier.py  fact_checker.py  news_fetcher.py  report_generator.py  rss_fetcher.py  security.py
supabase/: config.toml
supabase/migrations/: 202607180000_initial_schema.sql  202607180001_secure_analysis_boundary.sql  202607180002_topic_aggregation.sql  202607180003_versioned_analysis.sql  202607180004_fact_checking.sql  202607180005_source_deduplication.sql  202607180006_multichannel_ingestion.sql  202607180007_pipeline_runs.sql  202607190008_topic_viability.sql  202607190009_topic_intake_queue.sql  202607190010_evidence_review.sql  202607190011_domain_analysis.sql  202607190012_ingestion_provenance.sql  202607190013_worker_scheduling.sql  202607230014_submission_analysis_lifecycle.sql
tests/: test_analyzer.py  test_api.py  test_article_cleaner.py  test_config.py  test_consensus.py  test_content_ingestion.py  test_curated_pages.py  test_db.py  test_deduplicator.py  test_domain_profiles.py  test_evidence_verifier.py  test_fact_checker.py  test_news_fetcher.py  test_pipeline.py  test_primary_evidence.py  test_reddit_fetcher.py  test_report_generator.py  test_rss_fetcher.py  test_security.py  test_topic_viability.py  test_worker.py
(+54 files in other folders)
