[project]
name = "biasradar-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "openai>=2.46.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.8",
    "rich>=15.0.0",
    "supabase>=2.31.0",
    "tenacity>=9.1.4",
    "trafilatura>=2.1.0",
    "typer>=0.27.0",
]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]
